updates to js, css, and html files

--- a/www/index.html
+++ b/www/index.html
@@ -32,7 +32,7 @@
                     <ons-input id="username" placeholder="Username" modifier="underbar"></ons-input>
                     <ons-input id="password" placeholder="Password" modifier="underbar"></ons-input>
                     <ons-button modifier="outline" style="color: #E32227; border-color: #E32227">Submit</ons-button>
-                    <ons-button modifier="outline" style="color: white; background-color: #E32227; border-color: #E32227">Sign Up</ons-button>
+                    <ons-button id="sign-up-button" modifier="outline" style="color: white; background-color: #E32227; border-color: #E32227">Sign Up</ons-button>
                     <br/>
                     <ons-button id="guest-button" modifier="outline" style="color: #E32227; border-color: #E32227">Continue as Guest</ons-button>
                 </p>
@@ -41,6 +41,24 @@
 
     <ons-page id="page3">
         <h1>Page 3</h1>
+    </ons-page>
+
+    <ons-page id="signUpPage">
+        <ons-button id="backbutton" modifier="outline" style="color: #E32227; border-color: #E32227">Back</ons-button>
+
+        <div class="first-screen" id="clock2">
+                <i class="fas fa-history fa-9x"></i>
+        </div>
+
+        <div>
+               <h1 id="sign-up">Sign Up</h1>
+                <p class="login">
+                    <ons-input id="username" placeholder="Username" modifier="underbar"></ons-input>
+                    <ons-input id="password" placeholder="Password" modifier="underbar"></ons-input>
+                    <ons-button id="sign-up-button" modifier="outline" style="color: white; background-color: #E32227; border-color: #E32227">Sign Up</ons-button>
+                    <br/>
+                </p>
+            </div>
     </ons-page>
 
     <script type="text/javascript" src="cordova.js"></script>
