updates to index, css, js

--- a/www/index.html
+++ b/www/index.html
@@ -40,11 +40,12 @@
     </ons-page>
 
     <ons-page id="page3">
-        <h1>Page 3</h1>
+        <!-- <ons-back-button id="backbutton" modifier="outline" style="color: #E32227; border-color: #E32227">Back</ons-back-button> -->
+        <h1>Today in History</h1>
     </ons-page>
 
     <ons-page id="signUpPage">
-        <ons-button id="backbutton" modifier="outline" style="color: #E32227; border-color: #E32227">Back</ons-button>
+        <ons-back-button id="backbutton" modifier="outline" style="color: #E32227; border-color: #E32227">Back</ons-back-button>
 
         <div class="first-screen" id="clock2">
                 <i class="fas fa-history fa-9x"></i>
