--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
     <ons-splitter>
       <ons-splitter-side id="menu" side="left" width="220px" collapse swipeable>
         <ons-page>
-          <ons-list style="background-color: #E32227">
+          <ons-list style="background-color: #9B2335">
             <ons-list-item class="white-font">
               <i class="fas fa-history fa-2x" class="center"></i>
             </ons-list-item>
@@ -38,7 +38,7 @@
 
     <template id="favorite.html">
         <ons-page id="fav">
-            <ons-toolbar style="background-color: #E32227">
+            <ons-toolbar style="background-color: #9B2335">
               <div class="left">
                 <ons-toolbar-button class="white-font" onclick="fn.open()">
                   <ons-icon icon="md-menu" class="center"></ons-icon>
@@ -47,7 +47,7 @@
               <div class="center" style="color: white">Favorites
               </div>
                 <div class="right">
-                    <ons-button modifier="noborder" style="color: white; background-color: #E32227" onclick="fn.load('account.html')"><i class="fas fa-user"></i></ons-button>
+                    <ons-button modifier="noborder" style="color: white; background-color: #9B2335" onclick="fn.load('account.html')"><i class="fas fa-user"></i></ons-button>
                 </div>
             </ons-toolbar>
 
@@ -55,7 +55,7 @@
           </div>
 
 <!--           <div class="login">
-              <ons-button onclick="fn.removeFavorite()" id="unfavorite-btn2" modifier="outline" style="color: #E32227; border-color: #E32227"><i class='fas fa-heart-broken'></i> Unfavorite</ons-button>
+              <ons-button onclick="fn.removeFavorite()" id="unfavorite-btn2" modifier="outline" style="color: #9B2335; border-color: #9B2335"><i class='fas fa-heart-broken'></i> Unfavorite</ons-button>
           </div> -->
         </ons-page>
     </template>
@@ -63,7 +63,7 @@
 
     <template id="signin.html">
         <ons-page id="page1">
-            <ons-toolbar style="background-color: #E32227">
+            <ons-toolbar style="background-color: #9B2335">
               <div class="left">
                 <ons-toolbar-button class="white-font" onclick="fn.open()">
                   <ons-icon icon="md-menu"></ons-icon>
@@ -82,10 +82,10 @@
                 <p class="login">
                     <ons-input id="username" placeholder="Username" modifier="underbar"></ons-input>
                     <ons-input id="password" placeholder="Password" modifier="underbar"></ons-input>
-                    <ons-button onclick="fn.onSubmit()" id="submit-login" modifier="outline" style="color: #E32227; border-color: #E32227">Submit</ons-button>
-                    <ons-button onclick="fn.load('signup.html')" id="sign-up-button" modifier="outline" style="color: white; background-color: #E32227; border-color: #E32227">Sign Up</ons-button>
+                    <ons-button onclick="fn.onSubmit()" id="submit-login" modifier="outline" style="color: #9B2335; border-color: #9B2335">Submit</ons-button>
+                    <ons-button onclick="fn.load('signup.html')" id="sign-up-button" modifier="outline" style="color: white; background-color: #9B2335; border-color: #9B2335">Sign Up</ons-button>
                     <br/>
-                    <ons-button onclick="fn.load('events.html')" id="guest-button" modifier="outline" style="color: #E32227; border-color: #E32227">Continue as Guest</ons-button>
+                    <ons-button onclick="fn.load('events.html')" id="guest-button" modifier="outline" style="color: #9B2335; border-color: #9B2335">Continue as Guest</ons-button>
                 </p>
             </div>
         </ons-page>
@@ -94,7 +94,7 @@
     <template id="signup.html">
         <ons-page id="signUpPage">
 
-            <ons-toolbar style="background-color: #E32227">
+            <ons-toolbar style="background-color: #9B2335">
               <div class="left">
                 <ons-toolbar-button class="white-font" onclick="fn.open()">
                   <ons-icon icon="md-menu"></ons-icon>
@@ -105,7 +105,7 @@
             </ons-toolbar>
 
 <!--             <div class="left">
-                <ons-back-button id="backbutton" modifier="outline" style="color: #E32227; border-color:#E32227">Back</ons-back-button>
+                <ons-back-button id="backbutton" modifier="outline" style="color: #9B2335; border-color:#9B2335">Back</ons-back-button>
             </div> -->
 
             <div class="first-screen" id="clock2">
@@ -117,7 +117,7 @@
                 <p class="login">
                     <ons-input id="username" placeholder="Username" modifier="underbar"></ons-input>
                     <ons-input id="password" placeholder="Password" modifier="underbar"></ons-input>
-                    <ons-button id="sign-up-button" modifier="outline" style="color: white; background-color: #E32227; border-color: #E32227">Sign Up</ons-button><br/>
+                    <ons-button id="sign-up-button" modifier="outline" style="color: white; background-color: #9B2335; border-color: #9B2335">Sign Up</ons-button><br/>
                 </p>
             </div>
         </ons-page>
@@ -125,7 +125,7 @@
 
     <template id="events.html">
         <ons-page id="page3">
-            <ons-toolbar style="background-color: #E32227">
+            <ons-toolbar style="background-color: #9B2335">
               <div class="left">
                 <ons-toolbar-button class="white-font" onclick="fn.open()">
                   <ons-icon icon="md-menu"></ons-icon>
@@ -135,10 +135,10 @@
                 Today in History
               </div>
                 <div class="right">
-                    <ons-button onclick="fn.load('account.html')" modifier="noborder" style="color: white; background-color: #E32227"><i class="fas fa-user"></i></ons-button>
+                    <ons-button onclick="fn.load('account.html')" modifier="noborder" style="color: white; background-color: #9B2335"><i class="fas fa-user"></i></ons-button>
                 </div>
             </ons-toolbar>
-<!--             <ons-toolbar style="background-color: #E32227">
+<!--             <ons-toolbar style="background-color: #9B2335">
                 <ons-toolbar-button>
                     <ons-icon icon="md-menu" size="30px" style="color: white;"></ons-icon>
                 </ons-toolbar-button>
@@ -148,20 +148,20 @@
             <h3 id="title">MLK Jr. delivers "I Have <br/>A Dream" Speech</h3>
 
 <!--        <img src="mlk.jpg" id="event-picture" />
- -->        <img src="" id="event-picture" />
+ -->        <img id="event-picture" />
 
             <p id="event-details">"I Have a Dream" is a public speech that was delivered by American civil rights activist Martin Luther King Jr. during the March on Washington for Jobs and Freedom on August 28, 1963, in which he called for civil and economic rights and an end to racism in the United States.</p>
             <div class="login" id="favoriteButton">
-                <ons-button onclick="fn.addToFavorites()" id="favorite-btn" modifier="outline" style="color: #E32227; border-color: #E32227"><i class="far fa-heart"></i> Favorite</ons-button>
+                <ons-button onclick="fn.addToFavorites()" id="favorite-btn" modifier="outline" style="color: #9B2335; border-color: #9B2335"><i class="far fa-heart"></i> Favorite</ons-button>
 
-                <ons-button onclick="fn.removeFavorite()" id="unfavorite-btn" modifier="outline" style="color: #E32227; border-color: #E32227"><i class='fas fa-heart-broken'></i> Unfavorite</ons-button>
+                <ons-button onclick="fn.removeFavorite()" id="unfavorite-btn" modifier="outline" style="color: #9B2335; border-color: #9B2335"><i class='fas fa-heart-broken'></i> Unfavorite</ons-button>
             </div>
         </ons-page>
     </template>
 
     <template id="account.html">
         <ons-page id="account">
-            <ons-toolbar style="background-color: #E32227">
+            <ons-toolbar style="background-color: #9B2335">
               <div class="left">
                 <ons-toolbar-button class="white-font" onclick="fn.open()">
                   <ons-icon icon="md-menu" class="center"></ons-icon>
@@ -171,10 +171,10 @@
               </div>
             </ons-toolbar>
             <div class="user">
-                <i class="fas fa-user-circle fa-10x" style="color: #E32227"></i>
+                <i class="fas fa-user-circle fa-10x" style="color: #9B2335"></i>
                 <br/>
-                <h2 style="color: #E32227">USER NAME</h2>
-                <ons-button onclick="fn.startLogout()" id="signoutBtn" modifier="outline" style="color: #E32227; border-color: #E32227">Sign Out</ons-button>
+                <h2 style="color: #9B2335">USER NAME</h2>
+                <ons-button onclick="fn.startLogout()" id="signoutBtn" modifier="outline" style="color: #9B2335; border-color: #9B2335">Sign Out</ons-button>
             </div>
         </ons-page>
     </template>
